Convert file names to UTF-8 when it's declared CP437.

ZIP files can have non-UTF8 characters in the filename (and comments).
Encoding is declared by the language encoding flag (EFS) in general
purpose bit flag.
Before this change we assumed that it's always in UTF-8. When the raw
data is not valid UTF-8, such archive could not be read because we use
file name as a property name of Javascript object. This change ensures
that file names are valid UTF-8 byte sequence before using it as field
name.

In practice, some ZIP files have the flag 0 but using other nonstandard
encodings (like Shift-JIS) in the file names. In such case such file
names will still look garbled, but at least becomes accessible.

Bug: 834544
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ib07e572b509353350c83aa4d81e6fa88b3f1d9b5
Reviewed-on: https://chromium-review.googlesource.com/1039122
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Reviewed-by: Yuki Awano <yawano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560519}
Former-commit-id: 730acb5f58b5d30189afda725351879cd848c3d0