chrome/browser/resources/chromeos/zip_archiver/cpp/volume_archive.h
@@ -37,6 +37,7 @@ class VolumeArchive {
   // VolumeArchive::error_message().
   virtual VolumeArchive::Result GetCurrentFileInfo(
       std::string* path_name,
+      bool* isEncodedInUtf8,
       int64_t* size,
       bool* is_directory,
       time_t* modification_time) = 0;
